Adjusts pattern overloading